[package]
name = "mvsync"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
debug = false

[features]
all = ["command-buffers", "main-thread"]
command-buffers = []
main-thread = []

[dependencies]
crossbeam-channel = "0.5.8"
mvutils = "0.1.0"
num_cpus = "1.15.0"
