[package]
name = "mvsync"
version = "1.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Maxim Savenkov"]
description = "A standalone async and worker thread library, with expandable traits and command buffers."

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
debug = false

[features]
all = ["command-buffers", "main-thread"]
command-buffers = []
main-thread = []

[dependencies]
crossbeam-channel = "0.5.8"
mvutils = "0.3.1"
num_cpus = "1.16.0"
